syntax = "proto3";
package hex_play.system;

message StatusRequest {
  string question = 1;
}

message StatusResponse {
  string answer = 1;
}

service SystemService {
  rpc Status (StatusRequest) returns (StatusResponse);
}
